--- a/dcoker-compose.yml
+++ b/dcoker-compose.yml
@@ -17,14 +17,14 @@ services:
       DB_CONNECTION: mysql
       DB_HOST: mysql
       DB_PORT: 3306
-      DB_DATABASE: petcare
-      DB_USERNAME: petcare
-      DB_PASSWORD: petcare
+      DB_DATABASE: petcare 
+      DB_USERNAME: root
+      DB_PASSWORD: secret
 
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: teste
+      MYSQL_ROOT_PASSWORD: secret
     volumes:
       - ./mysql-data:/var/lib/mysql
     networks:
