localização do pet

--- a/.env
+++ b/.env
@@ -14,8 +14,11 @@ DB_PREFIX=
 
 SCAN_CACHEABLE=true
 
-
 REDIS_HOST=localhost
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
+
+RAPIDAPIKEY=024be67a53mshdb8a4fd3f71d3e6p19ead2jsne40ac09ceafe
+RAPIDAPIHOST=google-maps-geocoding.p.rapidapi.com
+RAPIDAPIURL=https://google-maps-geocoding.p.rapidapi.com/geocode/json
