--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "hyperf/rpc": "~3.0.0",
         "hyperf/rpc-client": "~3.0.0",
         "hyperf/rpc-server": "~3.0.0",
+        "hyperf/server": "*",
         "hyperf/session": "^3.0",
         "hyperf/validation": "^3.0",
         "league/oauth2-server": "^8.5",
