--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,26 @@
-version: '3'
 services:
   hyperf-skeleton:
     container_name: hyperf-skeleton
-    entrypoint: 
-      - php
-      - bin/hyperf.php
-      - server:watch
-    image: hyperf
-    build:
-      context: .
+    image: hyperf/hyperf:8.1-alpine-v3.13-swoole
+    working_dir: /app
+    entrypoint: ["php", "bin/hyperf.php", "server:watch"]
     volumes:
-      - ./:/opt/www
+      - ./:/app
     ports:
       - 9501:9501
-    privileged: true
-    user: root
+    privileged: true  # Verifique se realmente precisa de privilégios elevados
+    user: root  # Isso é necessário para seu caso de uso?
     networks:
       - hyperf-network
     environment:
-      - APP_ENV=dev
-      - SCAN_CACHEABLE=true
-      - DB_CONNECTION=mysql
-      - DB_HOST=hyperf-skeleton-mariadb
-      - DB_PORT=3306
-      - DB_DATABASE=petcare
-      - DB_USERNAME=root
-      - DB_PASSWORD=secret
+      APP_ENV: dev
+      SCAN_CACHEABLE: "true"
+      DB_CONNECTION: mysql
+      DB_HOST: hyperf-skeleton-mariadb
+      DB_PORT: 3306
+      DB_DATABASE: petcare
+      DB_USERNAME: root
+      DB_PASSWORD: secret
 
   hyperf-skeleton-mariadb:
     container_name: hyperf-skeleton-mariadb
@@ -39,43 +34,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: "secret"
       MYSQL_DATABASE: "petcare"
-
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:3.8-management
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-
-  #laravel-project:
-   # container_name: laravel-project
-    #image: php:8.1-fpm
-    #build:
-     # context: /home/gustavo/laravel-mails  # Ajuste o caminho do contexto aqui
-    #volumes:
-     # - /home/gustavo/laravel-mails:/var/www/html  # Ajuste o caminho do volume aqui
-    #ports:
-     # - 6000:6000
-    #networks:
-     # - hyperf-network
-    #environment:
-     # - APP_ENV=dev
-      #- DB_CONNECTION=mysql
-      #- DB_HOST=hyperf-skeleton-mariadb
-      #- DB_PORT=3306
-      #- DB_DATABASE=laravel_db
-      #- DB_USERNAME=root
-      #- DB_PASSWORD=secret
-
-  #nginx:
-    #container_name: nginx
-    #image: nginx:latest
-    #volumes:
-      #- ./laravel:/var/www/html
-    #ports:
-     # - 9000:80
-    #networks:
-     # - hyperf-network
 
 networks:
   hyperf-network:
